--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+language: node_js
+node_js:
+  - "10"
+before_deploy: npm run build
 deploy:
   provider: npm
   email: tanjiahui2015@foxmail.com
@@ -6,5 +10,3 @@ deploy:
   on:
     tags: true
     repo: flytam/axios-retry-enhancer
-    branch: main
-  skip_cleanup: 'true'
