--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "axios-retry-enhancer",
-  "version": "0.0.3-0",
+  "version": "0.0.3",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
