--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "prebuild": "rimraf dist",
+    "prebuild": "rm -rf ./dist",
     "build": "tsc",
     "prepublish": "npm run build",
     "test": "jest",
